kustomize/qbittorrent/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: qbittorrent
      port:
        number: 80
  tls:
    - hosts:
        - qbittorrent
